--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,5 +8,11 @@ header {
 }
 
 #banner {
-  background: #228833;
+  border: #8B4513;
+  background: #DEB887;
 }
+
+  .button {
+    border: #8B4513;
+    background: #DEB887;
+  }
