change button color

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,7 +12,8 @@ header {
   background: #DEB887;
 }
 
-  .button {
-    border: #8B4513;
+  .button.fork {
+    border: 1px solid #8b4513;
+    background: linear-gradient(rgb(222 184 135), rgb(139, 6,9 19));
     background: #DEB887;
   }
