moved .button into #banner block

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -10,10 +10,14 @@ header {
 #banner {
   border: #8B4513;
   background: #DEB887;
-}
 
-  .button.fork {
+  .button {
     border: 1px solid #8b4513;
     background: linear-gradient(rgb(222 184 135), rgb(139, 6,9 19));
     background: #DEB887;
   }
+
+  .fork {
+    background: #DEB887;
+  }
+}
