button color fix

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,10 +14,10 @@ header {
   .button {
     border: 1px solid #8b4513;
     background: linear-gradient(rgb(222 184 135), rgb(139, 6,9 19));
-    background: #DEB887;
+    background-color: #DEB887;
   }
 
   .fork {
-    background: #DEB887;
+    background-color: #DEB887;
   }
 }
