--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,13 +11,9 @@ header {
   border: #8B4513;
   background: #DEB887;
 
-  .button {
+  a.button.fork {
     border: 1px solid #8b4513;
     background: linear-gradient(rgb(222 184 135), rgb(139, 6,9 19));
-    background-color: #DEB887;
-  }
-
-  .fork {
     background-color: #DEB887;
   }
 }
