--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,7 +13,7 @@ header {
 
   a.button.fork {
     border: 1px solid #8b4513;
-    background: linear-gradient(rgb(222 184 135), rgb(139, 6,9 19));
+    background: linear-gradient(rgb(222, 184, 135), rgb(139, 69, 19));
     background-color: #DEB887;
   }
 }
