Invert banner color

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,8 +8,8 @@ header {
 }
 
 #banner {
-  border: #8B4513;
-  background: #DEB887;
+  border: #DEB887;
+  background: #8B4513;
 
   a.button.fork {
     border: 1px solid #8b4513;
