--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,8 +12,8 @@ body {
 }
 
 #banner {
-  border: 1px solid #8B4513;
-  background: #DEB887;
+  border: 1px solid #DEB887;
+  background: #8B4513;
 
   a.button.fork {
     border: 1px solid #8b4513;
