sidebar links are bigger

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
       <nav>
         <ul>
             {% for page in site.nav-pages %}
-                <a href="{{ page.url }}">{{ page.page-title }}<br></a>
+                <h3><a href="{{ page.url }}">{{ page.page-title }}<br></a></h3>
             {% endfor %}
         </ul>
       </nav>
