--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,5 @@
+<!-- edited version of _layouts/default.html from the leap-day theme -->
+
 <!doctype html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
