--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,13 +27,13 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
+        <a href="https://github.com/jc98w/chessbot" class="button fork"><strong>View On GitHub</strong></a>
         {% if site.show_downloads %}
           <div class="downloads">
             <span>Downloads:</span>
             <ul>
-              <li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
-              <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
+              <li><a href="assets/downloads/ChessApp.zip" class="button">ZIP</a></li>
+              <li><a href="assets/downloads/ChessApp.tar" class="button">TAR</a></li>
             </ul>
           </div>
         {% endif %}
