--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
           <div class="downloads">
             <span>Downloads:</span>
             <ul>
-              <li><a href="assets/downloads/ChessApp.zip" class="button">zip</a></li>
-              <li><a href="assets/downloads/ChessApp.tar" class="button">tar.gz</a></li>
+              <li><a href="assets/downloads/ChessApp.zip" class="button fork"><strong>zip</strong></a></li>
+              <li><a href="assets/downloads/ChessApp.tar" class="button fork"><strong>tar.gz</strong></a></li>
             </ul>
           </div>
         {% endif %}
