add a.button.download to scss

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,13 @@ body {
       color: #f3f3f3;
     }
   }
+
+  a.button.download {
+    border: 1px solid #8b4513;
+    background: linear-gradient(rgb(139, 69, 19), rgb(200, 100, 50));
+    background-color: #DEB887;
+    color: #f3f3f3;
+  }
 }
 
 iframe {
