--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
           <div class="downloads">
             <span>Downloads:</span>
             <ul>
-              <li><a href="assets/downloads/ChessApp.zip" class="button"><strong>zip</strong></a></li>
-              <li><a href="assets/downloads/ChessApp.tar" class="button"><strong>tar.gz</strong></a></li>
+              <li><a href="assets/downloads/ChessApp.zip" class="button download"><strong>zip</strong></a></li>
+              <li><a href="assets/downloads/ChessApp.tar" class="button download"><strong>tar.gz</strong></a></li>
             </ul>
           </div>
         {% endif %}
