--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
             <span>Downloads:</span>
             <ul>
               <li><a href="assets/downloads/ChessApp.zip" class="button download"><strong>zip</strong></a></li>
-              <li><a href="assets/downloads/ChessApp.tar" class="button download"><strong>tar.gz</strong></a></li>
+              <li><a href="assets/downloads/ChessApp.tar.gz" class="button download"><strong>tar.gz</strong></a></li>
             </ul>
           </div>
         {% endif %}
