--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,10 @@ body {
   background: #DEB887;
 }
 
+p {
+  text-indent: 2em;
+}
+
 #banner {
   border: 1px solid #DEB887;
   background: #8B4513;
