add game example images

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,6 +16,11 @@ p {
   text-indent: 2em;
 }
 
+img.game_example {
+  width: 100%;
+  height: auto;
+}
+
 #banner {
   border: 1px solid #DEB887;
   background: #8B4513;
